# AMDMIGraphX

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .mlir-requirements.txt  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONST_DATA_GATHER_OPTIMIZATION.md  Dockerfile  Dockerfile.hip-clang  Dockerfile.ort  Dockerfile2  Dockerfile_CENTOS  GATHER_CONCAT_FUSION.md  GATHER_OPTIMIZATION_SUMMARY.md  GATHER_TRANSPOSE_FUSION.md  GitLogTesting.ipynb  Jenkinsfile  LICENSE  MERGE_PARALLEL_GATHERS.md  README.md  SECURITY.md  benchmark_ck_vs_mlir.sh  build.ps1  codecov.yml  conv_unet_0.onnx  conv_unet_1.onnx  conv_unet_10.onnx  conv_unet_11.onnx  conv_unet_12.onnx  conv_unet_13.onnx  conv_unet_14.onnx  conv_unet_15.onnx  conv_unet_16.onnx  conv_unet_17.onnx  (+48 more)
doc/: CMakeLists.txt  classification-maptest.xml  requirements.txt
doc/html/: .buildinfo  contributor_guide.html  cpp_user_guide.html  dev_intro.html  developer_guide.html  driver.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  py_user_guide.html  search.html  searchindex.js
doc/src/: conf.py  contributor_guide.rst  cpp_user_guide.rst  dev_intro.rst  developer_guide.rst  driver.rst  index.rst  overview.rst  user_guide.rst
examples/blaze_integration_example/: CMakeLists.txt
examples/cpp_api_inference/: CMakeLists.txt  README.md  mnist_inference.cpp
examples/cpp_interface/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cmdline_options.cpp  cmdline_options.hpp  load_shape_file.cpp  load_shape_file.hpp  test_load_dim.cpp  test_load_onnx.cpp  test_run_onnx.cpp  utilities.cpp  utilities.hpp
examples/cpp_parse_load_save/: CMakeLists.txt  README.md  parse_load_save.cpp  testModelZoo.py
examples/paged_attention/: CMakeLists.txt  README.md  paged_attention_decode.cpp  paged_attention_prefill.cpp  verify_paged_attention.cpp
src/: CMakeLists.txt  adjust_allocation.cpp  amdgpu_fused_ops.cpp  analyze_streams.cpp  apply_alpha_beta.cpp  argument.cpp  assignment.cpp  auto_contiguous.cpp  autocast_fp8.cpp  base64.cpp  color.cpp  common.cpp  common_dims.cpp  common_subexpression_elimination.cpp  compile_modes.cpp  compile_src.cpp  config.h.in  constant_propagate.cpp  convert_to_json.cpp  cpp_generator.cpp  dead_code_elimination.cpp  decompose.cpp  dim_like.cpp  dom_info.cpp  dynamic_loader.cpp  dynamic_loader_win32.cpp  eliminate_allocation.cpp  eliminate_common_subexpression.cpp  eliminate_concat.cpp  eliminate_contiguous.cpp  eliminate_convert.cpp  eliminate_data_type.cpp  eliminate_fp8.cpp  eliminate_identity.cpp  eliminate_layout.cpp  eliminate_nested_converts.cpp  eliminate_pad.cpp  eliminate_scatternd.cpp  eliminate_zero_dim.cpp  env.cpp  (+141 more)
src/api/: CMakeLists.txt  api.cpp  convert_to_json.cpp  convert_to_json.hpp  json_tokenize.cpp  json_tokenize.hpp  jsonize_attr_string.cpp  jsonize_attr_string.hpp  migraphx.py
src/common_api/: CMakeLists.txt  mnist_sample.cpp  network.cpp  python.py  rnn_sample.cpp
src/driver/: CMakeLists.txt  alexnet.cpp  argument_parser.hpp  command.hpp  csv_ms.sh  inceptionv3.cpp  main.cpp  marker_roctx.cpp  marker_roctx.hpp  mlir.cpp  models.hpp  passes.cpp  passes.hpp  perf.cpp  perf.hpp  precision.hpp  resnet50.cpp  transform.cpp  transform.hpp  trim.cpp  trim.hpp  verify.cpp  verify.hpp  verify_options.hpp
src/dxgml/: ARCHITECTURE.md  CMakeLists.txt  dxgml.cpp  dxgml_parser.cpp  dxgml_parser.hpp  parse_ops.cpp
src/include/: base64.hpp  graphviz.hpp
src/onnx/: CMakeLists.txt  broadcast_qdq.cpp  checks.cpp  cifar10.cpp  conv.cpp  gelu.cpp  json_output.cpp  map_activation_functions.cpp  mnist.cpp  netron_output.cpp  onnx.cpp  onnx.proto  onnx_parser.cpp  op_parser.cpp  padding.cpp  parse_arg_op.cpp  parse_array_feature_extractor.cpp  parse_aten.cpp  parse_attention.cpp  parse_batchnorm.cpp  parse_biasadd.cpp  parse_biasgelu.cpp  parse_binary_op.cpp  parse_cast.cpp  parse_castlike.cpp  parse_celu.cpp  parse_clip.cpp  parse_compare_op.cpp  parse_concat_from_sequence.cpp  parse_constant.cpp  parse_constant_fill.cpp  parse_constant_of_shape.cpp  parse_conv_transpose.cpp  parse_convolution.cpp  parse_deconvolution.cpp  parse_depthtospace.cpp  parse_dequantizelinear.cpp  parse_dropout.cpp  parse_dynamicquantizelinear.cpp  parse_dynamicscale.cpp  (+100 more)
src/opt/: common_header.hpp  dfs.cpp  dom_info.cpp  dom_info.hpp  horizontal_fusion.cpp  horizontal_fusion_impl.cpp  (+12 more)
test/: CMakeLists.txt  adjust_allocation.cpp  algorithm.cpp  analyze_streams.cpp  any_ptr.cpp  argument_test.cpp  auto_contiguous_test.cpp  autocast_fp8.cpp  base64_test.cpp  bf16.cpp  bit_signal.cpp  byte_test.cpp  cast_inf.cpp  check_shapes_test.cpp  child.cpp  comment_test.cpp  common_dims.cpp  common_subexpression_elimination_test.cpp  common_test.cpp  compile_modes.cpp  const_eval_test.cpp  constant_propagate_test.cpp  context_test.cpp  convert_inf.cpp  convert_to_json.cpp  cpu_dot_op_test.cpp  cpu_event_test.cpp  cpu_ops_test.cpp  cpu_rnn_ops_test.cpp  dead_code_elimination_test.cpp  debug_symbols_test.cpp  decompose_test.cpp  dequantizelinear_test.cpp  dim_like_test.cpp  dom.cpp  dot_apply_alpha_beta_test.cpp  eliminate_allocation_test.cpp  eliminate_common_subexpression_test.cpp  eliminate_concat_test.cpp  eliminate_contiguous_test.cpp  (+145 more)
tools/: CMakeLists.txt  README.md  api.py  autotune_perf.py  batch_test_runner.py  benchmark_mxr.py  build_and_install_onnxrt.sh  build_and_install_ort.sh  build_and_test_onnxrt.sh  build_prereqs.sh  check_stamped.py  compile_analysis.py  convert_onnx_version.py  download_models.sh  dyn_test_runner.py  format.py  gemm_perf.py  generate.cmake  generate.cmd  generate.py  generate.sh  git_tools.py  install_prereqs.sh  install_prereqs_centos.sh  license_stamper.py  license_stamper_old.py  pai_provider_test_launcher.sh  pai_test_launcher.sh  pr-review-config.json  pr-review-status.py  requirements-py.txt  requirements.txt  roctx.py  stampStatus.py  stamp_status.py  te.py  testModelZoo.py  testModelZooRequirements.txt  test_onnxrt_parity_checks.sh  test_onnxrt_unit_tests.sh  (+5 more)
(+5967 files in other folders)
